# botify-lite

./: .gitignore  README.md  azuredeploy.json  docker-compose.yml  pyproject.toml  test_content_safety_comprehensive.py  test_content_safety_critical.py  test_jailbreak_comprehensive.py  test_jailbreak_critical.py
.devcontainer/: devcontainer.json  gitconfig-base  on-create.bash
apps/: credentials.env.template
apps/botify-cli/: Dockerfile  pyproject.toml
apps/botify-cli/app/: main.py
apps/botify-cli/app/core/: history.py
apps/botify-cli/app/ui/: terminal.py
apps/botify-cli/tests/api/: test_client.py
apps/botify-cli/tests/core/: test_history.py
apps/botify-server/: pyproject.toml
apps/botify_cli/: README.md  pyproject.toml
apps/botify_server/: Dockerfile  IMPLEMENTATION_SUMMARY.md  NEMO_SPIKE_README.md  README.md  entrypoint.sh  pyproject.toml
apps/botify_server/app/: main.py
apps/botify_server/app/api/: routes.py
apps/botify_server/app/config/guardrails/: config.yml  rails.co
apps/botify_server/app/core/: auth.py  config.py  logging.py  metrics.py  telemetry.py
apps/botify_server/app/services/: content_safety_service.py  content_safety_strategy.py  nemo_guardrails_service.py  openai_service.py
apps/botify_server/app/telemetry/: content_safety.py  decorators.py  health.py  logging.py  metrics.py  traces.py
apps/botify_server/prompts/: assistant_instructions.txt
apps/botify_server/tests/: test_nemo_guardrails_service.py
apps/botify_server/tests/services/: test_content_safety_service.py  test_openai_service.py
apps/otel_col/: Dockerfile  otel_config.yaml
apps/react-frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
apps/tokenservice/: Dockerfile  README.md  pyproject.toml
content_safety_tests/: test_content_safety_comprehensive.py  test_content_safety_critical.py  test_jailbreak_comprehensive.py  test_jailbreak_critical.py
content_safety_tests/results/: azure_content_safety_comprehensive_results.txt  azure_content_safety_critical_results.txt  azure_jailbreak_comprehensive_results.txt  (+5 more)
data/: 001_how_to_boil_water.json  002_how_to_charge_your_phone.json  003_how_to_fix_a_flat_tire.json  004_how_to_clean_your_windows.json  005_how_to_start_a_fire.json  006_how_to_remove_stains.json  007_how_to_polish_silverware.json  008_how_to_keep_flowers_fresh.json  009_how_to_deodorize_shoes.json  010_how_to_clean_a_blender.json  011_how_to_soften_butter.json  012_how_to_remove_scratches_from_wood_furniture.json  013_how_to_unclog_a_drain.json  014_how_to_remove_pet_hair.json  015_how_to_freshen_up_a_room.json  016_how_to_clean_a_microwave.json  017_how_to_prevent_glasses.json  018_how_to_remove_chewing_gum_from_hair.json  019_how_to_clean_a_grill.json  020_how_to_soothe_a_sunburn.json  021_how_to_remove_crayon_marks.json  022_how_to_clean_a_coffee_maker.json  023_how_to_remove_rust.json  024_how_to_clean_a_mattress.json  025_how_to_remove_water_rings.json  026_how_to_freshen_up_carpets.json  027_how_to_clean_a_showerhead.json  028_how_to_remove_ink_stains.json  029_how_to_clean_a_keyboard.json  030_how_to_remove_paint_stains.json  031_how_to_clean_a_hairbrush.json  032_how_to_remove_odors_from_cutting_boards.json  033_how_to_clean_a_dishwasher.json  034_how_to_remove_water_stains_from_wood.json
scripts/: create_vector_store.py
(+21 files in other folders)
