[tool.poetry]
name = "botify-lite"
version = "0.1.0"
description = "Botify Lite - A complete solution for interacting with Azure OpenAI"
authors = ["Joaquin Rodriguez <rjoaquin@microsoft.com>"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
openai = "^1.20.0"
botify_server = {path = "apps/botify_server", develop = true}
botify_cli = {path = "apps/botify_cli", develop = true}
nemoguardrails = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-vector-store = "scripts.create_vector_store:main"
